M1-307: Provider code lows: JSON conventions, sanitizer seam, dead keys, misc one-liners
Deep-review v5 verified lows sweep over the provider module, every
changed line traceable to one named entry: U-62/U-63 route persisted
JSON (serializeClusterMap, writeAuditRow details_json) through the
existing core JsonEscaper; U-64 replaces LlmOutputSanitizer's @Inject
null-field guard with an explicit seam constructor so the CDI path
always emits the spec-committed LLM_OUTPUT_SANITIZED audit rows; U-65
marks PendingInviteRow.expectedContactId @Nullable; U-68 fixes the
one-liners (value-less --vs usage reply, Locale.of, five
RuntimeException->IllegalStateException, unused AtomicReference import,
dead CHAT_MODE_REPLY + REPLY_WELCOME_GROUP_FIRST_MENTION and their
test/bundle entries).

Reviewed-by: code-reviewer (VERDICT: APPROVE; round 1; agent run: a9158e28096cf6294)

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>